# Sentiment_Analysis

./: .gitattributes  .gitignore  data_preprocessing.ipynb  data_preprocessing.py  exploratory.ipynb  exploratory.py  jupyter_utils.py  movie_lexicon.json  project.ipynb  project.py  pyproject.toml  requirements.txt  rule_based.ipynb  rule_based.py
data/processed/: rotten_tomatoes_critic_reviews_subset.csv
