[project]
name = "sentiment_analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yasser Kaddoura", email = "yasser.kaddoura19@gmail.com"},
]
dependencies = ["pandas>=2.3.3", "spacy>=3.8.11", "scikit-learn>=1.7.2", "tqdm>=4.67.1", "vaderSentiment>=3.3.2", "matplotlib>=3.10.7", "seaborn>=0.13.2", "tensorflow>=2.20.0", "torch>=2.9.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
jupyter = [
    "notebook>=7.5.0",
]
